--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@
 
     <div id="basic">
 
-        <div class="panel panel-default" style="float:left; width:50%; height:500px">
+        <div class="panel panel-default" style="float:left; width:60%; height:800px">
             <div class="panel-heading">
                 <h3 class="panel-title"> 尝试一下~ </h3>
             </div>
@@ -46,10 +46,10 @@
 
 
                 <div class="row-fluid" style="margin-top: 50px">
-                    <div class="span4" style="float: left;margin-left: 20%">
+                    <div class="span4" style="float: left;margin-left: 5%">
                         <img class="image img-rounded" src="../static/upload.jpg" id="basic-update"/>
                     </div>
-                    <div class="span4" style="float: right;margin-right: 20%">
+                    <div class="span4" style="float: right;margin-right: 5%">
                         <img class="image img-rounded" src="../static/upload.jpg" id="basic-result"/>
                         <div id="loader" class="loader" style="display: none;">
                             <div class="progress">
@@ -63,7 +63,7 @@
                 </div>
             </div>
         </div>
-        <div class="panel panel-default" style="float:right; width:45%">
+        <div class="panel panel-default" style="float:right; width:35%">
             <div class="panel-heading">
                 <h3 class="panel-title"> 一些效果展示~ (左->右：灰度图 / 生成图 / 原图 </h3>
             </div>
@@ -76,6 +76,13 @@
                         <img height="128" src="../static/basic/2.png" class="img-rounded"/>
                     </div>
                     <div class="show">
+                        <img height="128" src="../static/basic/3.png" class="img-rounded"/>
+                    </div>
+                    <div class="show">
+                        <img height="128" src="../static/basic/4.png" class="img-rounded"/>
+                    </div>
+                    <div class="show">
+                        <img height="128" src="../static/basic/5.png" class="img-rounded"/>
                     </div>
                 </div>
             </div>
@@ -141,6 +148,7 @@
 
     function showPreview(source, imgId) {
         upload_img()
+        $('#basic-result').css('filter', 'blur(5px)');
         $('#basic-update').css('display', 'block');
         $('#basic-result').css('display', 'block');
         $('#loader').css('display', 'block')
@@ -168,8 +176,8 @@
     }
 
     .image {
-        width: 200px;
-        height: 200px;
+        width: 400px;
+        height: 400px;
         display: none;
     }
 
@@ -178,7 +186,7 @@
     }
 
     #basic-result {
-        filter: blur(2px);
+        filter: blur(5px);
     }
 </style>
 </html>
